tests/fail/elaboration/unsolved/fun-literal-placeholder-body-type.fathom
//~ exit-code = 1

fun (A : Type) a (b : A) => a : fun (A : Type) -> _
